fixed svg location on mobile format

--- a/style/styles.css
+++ b/style/styles.css
@@ -793,7 +793,8 @@ h3 {
     .socialsvg {
         position: absolute;
         top: -4%;
-        right: 1%;
+        right: -1%;
+        padding: 0;
     }
     
     .selfcaresvg {
